# airline-robustness-starter

./: README.md  benchmark_defense.py  check_load.py  pyproject.toml  requirements.txt  run_app.bat  run_demo.py
config/: default.yaml
data/: airports.csv  routes.csv  sample_airports.csv  sample_routes.csv
notebooks/: 00_quickstart.md
outputs/: attack_log.json  baseline_report.json
src/: attacks.py  centrality.py  clustering.py  constants.py  data_io.py  defenses.py  geo.py  graph_build.py  metrics.py  simulate.py  viz.py
src/app/: streamlit_app.py
tests/: conftest.py  test_attacks.py  test_clustering.py  test_defenses.py  test_geo.py  test_metrics.py  test_toy.py  test_viz.py
