[project]
name = "airline-robustness"
version = "0.1.0"
requires-python = ">=3.10"
description = "Graph-theoretic toolkit for analyzing airline network robustness"
readme = "README.md"

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = '''
/(
    \.venv
    | __pycache__
    | \.git
)/
'''

[tool.ruff]
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = ["E501"]  # Line too long (Black handles this)

[tool.ruff.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
